--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
+  "homepage": "https://AbdullahSK03.github.io/Abdullah-Shaikh",
   "name": "frontend",
   "private": true,
-  "version": "0.0.0",
+  "version": "1.5.0",
   "type": "module",
   "proxy": "http://localhost:5000/",
   "scripts": {
-    "dev": "vite",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d dist",
+    "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
